--- a/templates/components/_formcontent.twig
+++ b/templates/components/_formcontent.twig
@@ -1,6 +1,14 @@
-<h1>{{ block.contacttitle }}</h1>
-<p>{{ block.contacttext }}</p>
 
-<div class="contact-form">
-    {{ craft.formie.renderForm(block.contentform.one().handle) }}
-</div>
+
+{% do craft.app.view.registerCssFile('@web/css/contactmanager.css') %}
+<section class="contact-section">
+    <div class="contact-wrapper">
+        <div class="contact-info">
+            <h1>{{ block.contacttitle }}</h1>
+            <p>{{ block.contacttext }}</p>
+        </div>
+        <div class="contact-form">
+            {{ craft.formie.renderForm(block.contentform.one().handle) }}
+        </div>
+    </div>
+</section>
