--- a/web/css/textmanager.css
+++ b/web/css/textmanager.css
@@ -1,23 +1,35 @@
 .positioning {
     display: flex;
     justify-content: center;
-    /*flex-direction: row;*/
     padding: 150px;
+    font-family: 'Bebas Neue', sans-serif;
 }
+
 .wrapper {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     width: 100%;
     max-width: 1200px;
+    flex-wrap: nowrap;
 }
+
+.imageposition, .textposition {
+    flex: 1;
+    margin: 10px;
+    min-width: 0;
+}
+
 .imageposition img {
-    max-width: 500px;
+    max-width: 400px;
+    width: 100%;
     height: auto;
 }
 
-.imageposition .textposition {
-    flex: 1;
-    margin: 10px;
+.textposition {
+    display: flex;
+    align-items: center;
 }
 
-
+.textposition p {
+    overflow-wrap: break-word;
+}
